# tduk-cli

./: .gitignore  .pre-commit-config.yaml  .travis.yml  pyproject.toml
.github/workflows/: main.yml
src/tduk_cli/: main.py
tests/: hello.feature  help.feature  initialize.feature  onboard.feature  test_help.py  test_initialize.py  test_main.py  test_onboard.py
