[project]
name = "tduk-cli"
version = "0.1.3"
description = ""
authors = [
    {name = "Martin Hewing",email = "martinhewing777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "tduk_cli", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-bdd = "^8.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tduk-cli = "tduk_cli.main:main"

[tool.black]
line_length = 88
target_version = ['py38']


